// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with other props 1`] = `
<div>
  <a
    className="twitter-hashtag-button"
    href="https://twitter.com/intent/tweet?button_hashtag=hashtag&text=text"
  >
    Tweet 
    hashtag
  </a>
</div>
`;

exports[`renders correctly with required props 1`] = `
<div>
  <a
    className="twitter-hashtag-button"
    href="https://twitter.com/intent/tweet?button_hashtag=hashtag&text="
  >
    Tweet 
    hashtag
  </a>
</div>
`;
